--- a/Last Exam/Github Search/app/src/main/res/layout/toolbar.xml
+++ b/Last Exam/Github Search/app/src/main/res/layout/toolbar.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:gravity="center"
-        android:text="Online"
+        android:text="@string/network_online_state"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
