--- a/Last Exam/Github Search/app/src/main/res/layout/announce_fragment.xml
+++ b/Last Exam/Github Search/app/src/main/res/layout/announce_fragment.xml
@@ -3,4 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/announceImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/no_result"
+        android:scaleType="centerCrop"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
