--- a/Last Exam/Github Search/app/src/main/res/layout/profile_fragment_cardname.xml
+++ b/Last Exam/Github Search/app/src/main/res/layout/profile_fragment_cardname.xml
@@ -46,6 +46,8 @@
 
         <TextView
             android:id="@+id/user_bio"
+            android:maxLines="3"
+            android:scrollbars="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bio Github Search"
