--- a/Last Exam/Github Search/app/src/main/res/layout/profile_fragment.xml
+++ b/Last Exam/Github Search/app/src/main/res/layout/profile_fragment.xml
@@ -8,10 +8,10 @@
         android:id="@+id/info"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        layout="@layout/profile_fragment_cardname"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="24dp"
+        layout="@layout/profile_fragment_card_name"
+        android:layout_marginHorizontal="@dimen/dp_24"
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginBottom="@dimen/dp_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
