--- a/Last Exam/Github Search/app/src/main/res/layout/activity_main.xml
+++ b/Last Exam/Github Search/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
         android:id="@+id/gitSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:paddingHorizontal="16dp"
+        android:layout_marginTop="@dimen/dp_8"
+        android:paddingHorizontal="@dimen/dp_16"
         app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,9 +33,8 @@
             android:id="@+id/gitEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:clickable="true"
             android:focusable="auto"
-            android:hint="Type account to search"
+            android:hint="@string/type_account_to_search"
             android:imeOptions="actionSearch"
             android:importantForAutofill="no"
             android:inputType="text"
@@ -48,15 +47,14 @@
             android:id="@+id/gitSearchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/dp_8"
             android:background="@android:color/transparent"
-            android:contentDescription="gitSearchBtn"
+            android:contentDescription="@string/git_search_button"
             android:src="@drawable/ic_search_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/gitEditText"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.fragment.app.FragmentContainerView
