--- a/Last Exam/Github Search/app/src/main/res/layout/profile_fragment_follow_item.xml
+++ b/Last Exam/Github Search/app/src/main/res/layout/profile_fragment_follow_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="12dp"
-    android:paddingVertical="12dp"
+    android:paddingHorizontal="@dimen/dp_12"
+    android:paddingVertical="@dimen/dp_12"
     android:id="@+id/follow_item">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/follow_avatar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/dp_48"
+        android:layout_height="@dimen/dp_48"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,9 +23,9 @@
         android:id="@+id/follow_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/dp_20"
         android:text="@string/app_name"
-        android:textSize="16sp"
+        android:textSize="@dimen/sp_16"
         app:layout_constraintBottom_toBottomOf="@id/follow_avatar"
         app:layout_constraintStart_toEndOf="@id/follow_avatar"
         app:layout_constraintTop_toTopOf="@id/follow_avatar" />
